# kde-telepathy-ktp-call-ui

./: CMakeLists.txt  ktp-call-ui_0.4.0.orig.tar.bz2.delta  ktp-call-ui_0.4.0.orig.tar.bz2.id  ktp-call-ui_0.5.1.orig.tar.bz2.delta  ktp-call-ui_0.5.1.orig.tar.bz2.id  ktp-call-ui_0.5.3.orig.tar.bz2.delta  ktp-call-ui_0.5.3.orig.tar.bz2.id  ktp-call-ui_0.6.0.orig.tar.bz2.delta  ktp-call-ui_0.6.0.orig.tar.bz2.id  ktp-call-ui_0.6.1.orig.tar.bz2.delta  ktp-call-ui_0.6.1.orig.tar.bz2.id  ktp-call-ui_0.6.2.orig.tar.bz2.delta  ktp-call-ui_0.6.2.orig.tar.bz2.id  ktp-call-ui_0.6.3.orig.tar.bz2.delta  ktp-call-ui_0.6.3.orig.tar.bz2.id  ktp-call-ui_0.6.80.orig.tar.bz2.delta  ktp-call-ui_0.6.80.orig.tar.bz2.id  ktp-call-ui_0.7.0.orig.tar.bz2.delta  ktp-call-ui_0.7.0.orig.tar.bz2.id  ktp-call-ui_0.7.80.orig.tar.bz2.delta  ktp-call-ui_0.7.80.orig.tar.bz2.id  ktp-call-ui_0.8.0.orig.tar.bz2.delta  ktp-call-ui_0.8.0.orig.tar.bz2.id  ktp-call-ui_0.8.1.orig.tar.bz2.delta  ktp-call-ui_0.8.1.orig.tar.bz2.id  ktp-call-ui_0.8.80.orig.tar.bz2.delta  ktp-call-ui_0.8.80.orig.tar.bz2.id  ktp-call-ui_0.9.0+git20151115.orig.tar.bz2.delta  ktp-call-ui_0.9.0+git20151115.orig.tar.bz2.id  ktp-call-ui_0.9.0.orig.tar.bz2.delta  ktp-call-ui_0.9.0.orig.tar.bz2.id
debian/: changelog  (+6 more)
po/: CMakeLists.txt
po/bg/: ktp-call-ui.po
po/bs/: ktp-call-ui.po
po/ca/: ktp-call-ui.po
po/ca@valencia/: ktp-call-ui.po
po/cs/: ktp-call-ui.po
po/da/: ktp-call-ui.po
po/de/: ktp-call-ui.po
po/el/: ktp-call-ui.po
po/en_GB/: ktp-call-ui.po
po/eo/: ktp-call-ui.po
po/es/: ktp-call-ui.po
po/et/: ktp-call-ui.po
(+43 files in other folders)
